# Tars

./: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  background_task.cc  background_task.h  idf_component.yml  main.cc  ota.cc  settings.h  system_info.cc  system_info.h
main/assets/: wifi_configuration_ap.html
main/audio_codecs/: audio_codec.cc  audio_codec.h  no_audio_codec.h
main/audio_processing/: audio_processor.cc  audio_processor.h  wake_word_detect.cc  wake_word_detect.h
main/boards/common/: board.cc  board.h  led.cc  led.h  wifi_board.cc  wifi_board.h
main/boards/esp32-s3/: config.h  esp32s3_board.cc
main/display/: display.cc  display.h  no_display.cc  no_display.h  ssd1306_display.cc  ssd1306_display.h
main/protocols/: protocol.cc  protocol.h  websocket_protocol.cc  websocket_protocol.h
main/web_socket/: web_socket.cc  web_socket.h
main/wifi_connect/: wifi_configuration_ap.cc  wifi_configuration_ap.h  wifi_station.cc
